\name{ChIPQCNews}
\title{ChIPQC News}
\encoding{UTF-8}

\section{Version 1.1.2}{
 \itemize{
  \item{Big fixes/man page fixes}
  }
}

\section{Version 1.0.1}{
 \itemize{
  \item{Changed defaults: annotation, facetBy}
  \item{Bugfixes handling sample lists without peaks}
  }
}

\section{Version 1.0.0}{
 \itemize{
  \item{Initial release.}
  }
}