@@ -2,6 +2,12 @@
 \title{ChIPQC News}
 \encoding{UTF-8}
 
+\section{Version 1.4.4}{
+ \itemize{
+  \item{Report sample errors when analyzing experiment}
+  }
+}
+
 \section{Version 1.1.2}{
  \itemize{
   \item{Big fixes/man page fixes}
